--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,15 @@
 .app-wrapper {
-  display: grid;
-  margin: 0 auto;
-  width: 1400px;
-  grid-template-areas:
-  "header header"
-  "nav content";
-  grid-template-rows: 60px 1fr;
-  grid-template-columns: 2fr 10fr;
+    display: grid;
+    margin: 0 auto;
+    width: 1400px;
+    grid-template-areas:
+        "header header"
+        "nav content";
+    grid-template-rows: 60px 1fr;
+    grid-template-columns: 2fr 10fr;
+}
+
+.app-wrapper-content {
+    grid-area: content;
+    background-color: #DCD6F7;
 }
