Added NavLink and SPA complite

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,8 +1,12 @@
 .nav {
     grid-area: nav;
     background-color: #A6B1E1;
-  }
+}
 
 .item {
     color: white;
+}
+
+.active {
+    color: blue;
 }
