added SPA dialogs smashed components in profile

--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -7,8 +7,12 @@
     padding: 10px;
 }
 
-.dialogsList .dialog {
+.dialog {
     color: black;   
+}
+
+.active {
+    color: white;
 }
 
 .messages {
